fix: colors render; z-index for dropdown list; Dropdown styles fix

--- a/src/components/statistic/Diagram.scss
+++ b/src/components/statistic/Diagram.scss
@@ -5,7 +5,7 @@
   // width: 320px; //attention
   // background-color: rgba(255, 255, 255, 0.7);
   background-color: transparent;
-  backdrop-filter: blur(5px);
+  // backdrop-filter: blur(5px);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -52,8 +52,7 @@
     display: flex;
     flex-direction: column;
     margin-top: 0;
-    
-    
+
     &__data {
       margin-left: auto;
       margin-right: auto;
